Fix Firefox issue
Fix the web layout issue

--- a/includes/style.css
+++ b/includes/style.css
@@ -398,7 +398,6 @@ input {
 
 .tiles {
 	position: relative;
-	overflow:hidden;
 	width: 100%;
 }
 
